# libgfxinit-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/libgfxinit-src/: Cargo.toml
crates/libgfxinit-src/src/: lib.rs
crates/libgfxinit-sys/: Cargo.toml  build.rs
crates/libgfxinit-sys/build_support/bridge/: gma-gfx_init.adb  gma-gfx_init.ads  gma.adb  gma.ads
crates/libgfxinit-sys/src/: lib.rs
docs/: integration-notes.md
src/: lib.rs
