[package]
name = "libgfxinit-sys"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
description = "Low-level no_std FFI and Ada build glue for coreboot/libgfxinit"
build = "build.rs"
links = "gfxinit"

[lib]
path = "src/lib.rs"

[features]
default = ["build-ada"]
# Build libhwbase/libgfxinit Ada sources for non-hosted targets. By default,
# sources come from LIBHWBASE_SRC and LIBGFXINIT_SRC. Enable `vendored` to use
# the companion libgfxinit-src crate instead.
build-ada = ["llvm-ada-toolchain"]
# Use libgfxinit-src's bundled Ada sources, like openssl-sys's vendored mode.
vendored = ["dep:libgfxinit-src"]
# Only verify/link an already-built libgfxinit/libhw archive.
link-prebuilt = ["llvm-ada-toolchain"]
# Enforce that ADA_CC is GNAT LLVM.
llvm-ada-toolchain = []
# Link hosted libgnat. Firmware integrations usually provide their own RTS and
# should leave this disabled.
hosted-gnat-runtime = []

# Mutually-exclusive generation selectors. Build.rs enforces exactly one when
# Ada is built. They are features despite Cargo's additive semantics because
# build.rs can give a clear error if multiple are enabled.
gen-g45 = []
gen-ironlake = []
gen-haswell = []
gen-broxton = []
gen-skylake = []
gen-tigerlake = []

[build-dependencies]
libgfxinit-src = { path = "../libgfxinit-src", version = "0.1.0", optional = true }
